allow custom request methods; uploader value is always an array of DominusFile entries

--- a/src/app/demo/uploader-demo/uploader-demo.component.html
+++ b/src/app/demo/uploader-demo/uploader-demo.component.html
@@ -1,5 +1,7 @@
 <mat-card>
   <mat-card-content>
-    <dominus-uploader endpointUrl="http://localhost:81/files/files/upload"></dominus-uploader>
+    <dominus-uploader
+        fileSaveEndpoint="http://localhost:81/files/files/upload"
+        fileDeleteEndpoint="http://localhost:81/files/files/delete"></dominus-uploader>
   </mat-card-content>
 </mat-card>
