--- a/src/app/dominus/dominus-uploader/dominus-uploader.component.html
+++ b/src/app/dominus/dominus-uploader/dominus-uploader.component.html
@@ -1,26 +1,29 @@
 <ng-container *ngIf="multiple; else singleFileUploader">
-  <div class="multiple-file-uploader">
+    <div class="multiple-file-uploader">
 
-  </div>
+    </div>
 </ng-container>
 
 <ng-template #singleFileUploader>
-  <div class="single-file-uploader">
-    <div class="file-info">
-      <span class="filename">{{hasFiles ? _value[0].name : (_filesQueue[_lastFileId] ? _filesQueue[_lastFileId].name : 'No file')}}</span>
-      <span *ngIf="_filesQueue[_lastFileId]" class="error">{{ _filesQueue[_lastFileId].error }}</span>
-      <mat-progress-bar *ngIf="_filesQueue[_lastFileId] && _filesQueue[_lastFileId].error === ''"
-        class="progress"
-        [value]="_filesQueue[_lastFileId].progress"></mat-progress-bar>
-    </div>
-    <button mat-mini-fab
-      [color]="hasFiles ? 'warn' : 'primary'"
-      [ngClass]="{'upload-btn': !hasFiles, 'delete-btn': hasFiles}"
-      (click)="hasFiles ? removeFile(0) : fileInput.click()">
+    <div class="single-file-uploader">
+<!--        <div class="file-preview">-->
+<!--            <img *ngIf="hasFiles && _value[0].isImage" [src]="" alt="Preview">-->
+<!--        </div>-->
+        <div class="file-info">
+            <span class="filename">{{hasFiles ? _value[0].name : (_filesQueue[_lastFileId] ? _filesQueue[_lastFileId].name : 'No file')}}</span>
+            <span *ngIf="_filesQueue[_lastFileId]" class="error">{{ _filesQueue[_lastFileId].error }}</span>
+            <mat-progress-bar *ngIf="_filesQueue[_lastFileId] && _filesQueue[_lastFileId].error === ''"
+                              class="progress"
+                              [value]="_filesQueue[_lastFileId].progress"></mat-progress-bar>
+        </div>
+        <button mat-mini-fab
+                [color]="hasFiles ? 'warn' : 'primary'"
+                [ngClass]="{'upload-btn': !hasFiles, 'delete-btn': hasFiles}"
+                (click)="hasFiles ? removeFile(0) : fileInput.click()">
 
-      <mat-icon>{{!hasFiles ? 'attach_file' : 'delete'}}</mat-icon>
-    </button>
-  </div>
+            <mat-icon>{{!hasFiles ? 'attach_file' : 'delete'}}</mat-icon>
+        </button>
+    </div>
 </ng-template>
 
 <input type="file" [multiple]="multiple" (change)="onFiles($event)" #fileInput>
