--- a/src/app/dominus/dominus-uploader/dominus-uploader.component.scss
+++ b/src/app/dominus/dominus-uploader/dominus-uploader.component.scss
@@ -1,26 +1,46 @@
 input[type="file"] {
-  display: none;
+    display: none;
 }
 
-.single-file-uploader {
-  display: flex;
-  align-items: center;
-
-  .file-info {
+.container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    margin-right: 15px;
+    min-height: 100px;
+    padding: 10px;
 
-    .filename {
-      margin-bottom: 5px;
-      max-width: 140px;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    &.multiple:not(.mat-form-field) {
+        border: 1px dotted var(--dominus-uploader-file-default-border-color, #cecece);
+        &.dragover {
+            border-color: var(--dominus-uploader-file-hover-border-color, #6495EDFF);
+        }
     }
-    .error {
-      color: var(--app-color-warn);
-      margin-bottom: 5px;
+
+    &.mat-form-field {
+        width: 100%;
     }
-  }
+
+    .no-files-multiple {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .no-files-single {
+        display: flex;
+        align-items: center;
+        >button {
+            margin-left: 15px;
+        }
+    }
+
+    .actions {
+        display: flex;
+        margin-bottom: 25px;
+        >button {
+            &:not(:last-child) {
+                margin-right: 8px;
+            }
+        }
+    }
 }
