Added method to open files input

--- a/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
+++ b/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
@@ -38,4 +38,20 @@
         </app-component-docs-section-item>
 
     </app-component-docs-section>
+
+    <app-component-docs-section label="Outputs">
+        <app-component-docs-section-item label="uploadFinished">
+            Event triggered when all the files in the upload queue are uploaded.
+        </app-component-docs-section-item>
+    </app-component-docs-section>
+
+    <app-component-docs-section label="Methods">
+        <app-component-docs-section-item label="openFilesInput">
+            Opens the file input dialog.
+        </app-component-docs-section-item>
+
+        <app-component-docs-section-item label="removeFile">
+            Removes an uploaded file by index
+        </app-component-docs-section-item>
+    </app-component-docs-section>
 </app-component-docs>
