--- a/src/app/demo/uploader-demo/uploader-demo.component.html
+++ b/src/app/demo/uploader-demo/uploader-demo.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="card">
     <mat-tab-group animationDuration="0">
         <mat-tab label="Overview">
             <mat-card-content>
