added @Input to allow passing custom headers to the requests

--- a/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
+++ b/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
@@ -9,12 +9,20 @@
             Request method used to call the the endpoint on file save
         </app-component-docs-section-item>
 
+        <app-component-docs-section-item label="fileSaveEndpointRequestHeaders">
+            Headers to be passed along the file save request.
+        </app-component-docs-section-item>
+
         <app-component-docs-section-item label="fileDeleteEndpoint">
             Endpoint to be called when deleting a file or clearing all uploaded files if [multiple] = true
         </app-component-docs-section-item>
 
         <app-component-docs-section-item label="fileDeleteEndpointRequestMethod">
             Request method used to call the the endpoint on file delete
+        </app-component-docs-section-item>
+
+        <app-component-docs-section-item label="fileDeleteEndpointRequestHeaders">
+            Headers to be passed along the file delete request.
         </app-component-docs-section-item>
 
         <app-component-docs-section-item label="multiple">
