added @Input to allow passing custom headers to the requests

--- a/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
+++ b/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
@@ -10,7 +10,7 @@
         </app-component-docs-section-item>
 
         <app-component-docs-section-item label="fileSaveEndpointRequestHeaders">
-            Headers to be passed along the file save request.
+            Headers to be passed along the file save request. Can be an object of headers or a promise that returns the headers.
         </app-component-docs-section-item>
 
         <app-component-docs-section-item label="fileDeleteEndpoint">
@@ -22,7 +22,7 @@
         </app-component-docs-section-item>
 
         <app-component-docs-section-item label="fileDeleteEndpointRequestHeaders">
-            Headers to be passed along the file delete request.
+            Headers to be passed along the file delete request. Can be an object of headers or a promise that returns the headers.
         </app-component-docs-section-item>
 
         <app-component-docs-section-item label="multiple">
