--- a/src/app/dominus/dominus-uploader/dominus-uploader.component.html
+++ b/src/app/dominus/dominus-uploader/dominus-uploader.component.html
@@ -1,54 +1,50 @@
 <div #uploaderContainer [ngClass]="_containerClasses">
-    <ng-container *ngIf="multiple; else singleFileUploader">
-        <div class="actions">
-            <button type="button" mat-raised-button color="primary" (click)="openFilesInput()">
-                <mat-icon>add</mat-icon>
-                {{ intl[DominusUploaderIntl.MULTIPLE_ADD_FILES_BTN] }}
-            </button>
-        </div>
-        <ng-container *ngIf="hasFiles || _filesQueue.has(_lastFileId); else noFilesMultiple">
-            <app-dominus-uploader-file
-                *ngFor="let file of _value; let i = index"
-                [fileIndex]="i"
-                [imagePreviewStyles]="imagePreviewStyles"
-                [file]="file"
-                (fileDelete)="removeFile($event)"
-            ></app-dominus-uploader-file>
+    <ng-container [ngSwitch]="_uploaderType">
+        <ng-container *ngSwitchCase="'file-uploader-multiple'">
+            <div class="actions">
+                <button type="button" mat-raised-button color="primary" (click)="openFilesInput()">
+                    <mat-icon>add</mat-icon>
+                    {{ intl[DominusUploaderIntl.MULTIPLE_ADD_FILES_BTN] }}
+                </button>
+            </div>
+            <ng-container *ngIf="hasFiles || _filesQueue.has(_lastFileId); else noFilesMultiple">
+                <dominus-uploader-file
+                    *ngFor="let file of _value; let i = index"
+                    [fileIndex]="i"
+                    [imagePreviewStyles]="imagePreviewStyles"
+                    [file]="file"
+                    error=""
+                    [progressBarColor]="progressBarColor"
+                    [allowDeleteAction]="allowDeleteAction"
+                    [showImagePreview]="showImagePreview"
+                    (fileDelete)="removeFile($event)"
+                ></dominus-uploader-file>
 
-            <app-dominus-uploader-file
-                *ngFor="let queuedFile of _filesQueue.entries()"
-                [fileIndex]="queuedFile[0]"
-                [error]="queuedFile[1].error"
-                [uploadProgress]="queuedFile[1].progress"
-                [file]="queuedFile[1]"
-                (fileRetry)="_retryUpload($event)"
-            ></app-dominus-uploader-file>
-        </ng-container>
-        <ng-template #noFilesMultiple>
-            <div class="no-files-multiple">
-                <h3>{{ intl[DominusUploaderIntl.MULTIPLE_NO_FILES_MESSAGE] }}</h3>
-                <span *ngIf="allowedExtensions.length" class="allowed-extensions">
+                <dominus-uploader-file
+                    *ngFor="let queuedFile of _filesQueue.entries()"
+                    [fileIndex]="queuedFile[0]"
+                    [error]="queuedFile[1].error"
+                    [imagePreviewStyles]="imagePreviewStyles"
+                    [uploadProgress]="queuedFile[1].progress"
+                    [file]="queuedFile[1]"
+                    [progressBarColor]="progressBarColor"
+                    [allowDeleteAction]="allowDeleteAction"
+                    [showImagePreview]="showImagePreview"
+                    (fileRetry)="_retryUpload($event)"
+                ></dominus-uploader-file>
+            </ng-container>
+            <ng-template #noFilesMultiple>
+                <div class="no-files-multiple">
+                    <h3>{{ intl[DominusUploaderIntl.MULTIPLE_NO_FILES_MESSAGE] }}</h3>
+                    <span *ngIf="allowedExtensions.length" class="allowed-extensions">
                     <span>{{intl[DominusUploaderIntl.ALLOWED_EXTENSIONS]}}:</span> {{ allowedExtensions.join(', ') }}
                 </span>
-            </div>
-        </ng-template>
-    </ng-container>
+                </div>
+            </ng-template>
+        </ng-container>
 
-    <ng-template #singleFileUploader>
-        <app-dominus-uploader-file
-            *ngIf="hasFiles || _filesQueue.has(_lastFileId); else noFilesSingle"
-            [fileIndex]="0"
-            [imagePreviewStyles]="imagePreviewStyles"
-            [error]="_filesQueue.get(_lastFileId)?.error"
-            [uploadProgress]="_filesQueue.get(_lastFileId)?.progress"
-            [file]="hasFiles ? _value[0] : $any(_filesQueue.get(_lastFileId))"
-            (fileDelete)="removeFile($event)"
-            (fileRetry)="_retryUpload($event)"
-        ></app-dominus-uploader-file>
-
-        <ng-template #noFilesSingle>
-            <div class="no-files-single">
-                <span>{{ intl[DominusUploaderIntl.SINGLE_NO_FILES_MESSAGE] }}</span>
+        <ng-container *ngSwitchCase="'file-uploader-single'">
+            <div class="actions">
                 <button mat-mini-fab
                         type="button"
                         color="primary"
@@ -58,7 +54,62 @@
                     <mat-icon>attach_file</mat-icon>
                 </button>
             </div>
+
+            <dominus-uploader-file
+                *ngIf="hasFiles || _filesQueue.has(_lastFileId);"
+                [fileIndex]="0"
+                [imagePreviewStyles]="imagePreviewStyles"
+                [error]="_filesQueue.get(_lastFileId)?.error || ''"
+                [uploadProgress]="_filesQueue.get(_lastFileId)?.progress"
+                [file]="hasFiles ? _value[0] : $any(_filesQueue.get(_lastFileId))"
+                [progressBarColor]="progressBarColor"
+                (fileDelete)="removeFile($event)"
+                (fileRetry)="_retryUpload($event)"
+            ></dominus-uploader-file>
+        </ng-container>
+
+        <ng-container *ngSwitchDefault>
+            <div class="actions">
+                <button type="button" mat-mini-fab color="primary" (click)="openFilesInput()">
+                    <mat-icon>add</mat-icon>
+                </button>
+            </div>
+            <ng-container *ngIf="hasFiles || _filesQueue.has(_lastFileId); else noImagePlaceholder">
+                <div class="image-previews">
+                    <ng-container *ngIf="multiple || _filesQueue.size === 0">
+                        <dominus-uploader-image
+                            *ngFor="let file of _value; let i = index"
+                            [fileIndex]="i"
+                            [file]="file"
+                            error=""
+                            [progressBarColor]="progressBarColor"
+                            [imagePreviewStyles]="imagePreviewStyles"
+                            [allowDeleteAction]="allowDeleteAction"
+                            (fileDelete)="removeFile($event)"></dominus-uploader-image>
+                    </ng-container>
+
+                    <dominus-uploader-image
+                        *ngFor="let queuedFile of _filesQueue.entries()"
+                        [fileIndex]="queuedFile[0]"
+                        [error]="queuedFile[1].error"
+                        [uploadProgress]="queuedFile[1].progress"
+                        [file]="queuedFile[1]"
+                        [progressBarColor]="progressBarColor"
+                        [imagePreviewStyles]="imagePreviewStyles"
+                        [allowDeleteAction]="allowDeleteAction"
+                        (fileRetry)="_retryUpload($event)"></dominus-uploader-image>
+                </div>
+            </ng-container>
+        </ng-container>
+
+        <ng-template #noImagePlaceholder>
+            <div class="no-files-multiple">
+                <h3>{{ intl[DominusUploaderIntl.NO_IMAGE_MESSAGE] }}</h3>
+                <span *ngIf="allowedExtensions.length" class="allowed-extensions">
+                    <span>{{intl[DominusUploaderIntl.ALLOWED_EXTENSIONS]}}:</span> {{ allowedExtensions.join(', ') }}
+                </span>
+            </div>
         </ng-template>
-    </ng-template>
+    </ng-container>
 </div>
 <input #fileInput type="file" [accept]="allowedExtensions.length ? '.' + allowedExtensions.join(',.') : null" [multiple]="multiple" (change)="_onFiles($any($event.target).files)">
