--- a/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
+++ b/src/app/demo/uploader-demo/docs/uploader-docs/uploader-docs.component.html
@@ -41,6 +41,12 @@
             Shows or hides the file/image delete action.
         </app-component-docs-section-item>
 
+        <app-component-docs-section-item label="maxImageSize">
+            Limits the maximum width and/or height of uploaded images.
+            Multiple sizes can be added in the array, for example you can
+            check if the uploaded image has a width of 100 by passing [maxImageSize]="[{{'{'}}width: 100{{'}'}}]"
+        </app-component-docs-section-item>
+
         <app-component-docs-section-item label="maxFileSize">
             Maximum file size in bytes
         </app-component-docs-section-item>
