--- a/src/app/dominus/dominus-uploader/components/dominus-uploader-image/dominus-uploader-image.component.scss
+++ b/src/app/dominus/dominus-uploader/components/dominus-uploader-image/dominus-uploader-image.component.scss
@@ -15,7 +15,7 @@
         }
 
         .overlay {
-            background-color: rgba(255, 255, 255, 0.6);
+            background-color: var(--dominus-uploader-image-uploading-overlay, rgba(255, 255, 255, 0.6));
             position: absolute;
             width: auto;
             height: auto;
@@ -34,7 +34,7 @@
         }
 
         .error-container {
-            background-color: rgba(255, 255, 255, 0.6);
+            background-color: var(--dominus-uploader-image-error-container-background, rgba(255, 255, 255, 0.6));
             .error {
                 color: var(--dominus-uploader-error-color, #f44336);
             }
